# GnomePaper-Engine

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
data/: io.github.gnomepaper.Engine.desktop
gnomepaper_engine/: __init__.py  __main__.py  app.py  autostart.py  config.py  tray.py
gnomepaper_engine/steam/: __init__.py  library.py  models.py  ownership.py  paths.py  remove.py
gnomepaper_engine/ui/: __init__.py  main_window.py  previews.py  settings.py  theme.py  wallpaper_card.py  workshop_card.py
gnomepaper_engine/wallpaper/: __init__.py  desktop_player.py  display_geometry.py  focus_audio.py  gnome_bg.py  manager.py  process_audio.py  x11_desktop.py
gnomepaper_engine/wallpaper/backends/: __init__.py  base.py  lwe.py  scene.py  video.py
gnomepaper_engine/workshop/: __init__.py  client.py  keyring.py  steam_account.py  steam_native.py  steam_profile.py  steam_qr_auth.py  steam_worker.py
scripts/: install_linux_wallpaperengine.sh  install_steamcmd.sh
