[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gnomepaper-engine"
version = "1.0.0"
description = "Wallpaper Engine for GNOME — Steam workshop library, video & scene wallpapers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GnomePaper Engine contributors" }]
keywords = ["gnome", "wallpaper", "steam", "wallpaper-engine", "linux"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Desktop Environment :: Gnome",
]
# System packages (Fedora/Nobara): python3-gobject gtk4 libadwaita
# Optional: mpv, xprop, wmctrl, xdotool; SteamCMD for workshop direct download
dependencies = []

[project.urls]
Homepage = "https://github.com/christianl/GnomePaper-Engine"
Repository = "https://github.com/christianl/GnomePaper-Engine"
Issues = "https://github.com/christianl/GnomePaper-Engine/issues"

[project.scripts]
gnomepaper-engine = "gnomepaper_engine.__main__:main"

[project.gui-scripts]
gnomepaper-engine-gui = "gnomepaper_engine.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gnomepaper_engine*"]

[tool.setuptools.package-data]
gnomepaper_engine = ["py.typed"]
