[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gnomepaper-engine"
version = "1.1.7"
description = "Wallpaper Engine for GNOME — Steam workshop library, video & scene wallpapers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "WiseManChris" }]
keywords = ["gnome", "wallpaper", "steam", "wallpaper-engine", "linux"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Desktop Environment :: Gnome",
]
# UI depends on system packages (any GNOME distro): PyGObject, GTK4, libadwaita
# Install with: ./install.sh
# Seamless Steam downloads use steam[client] (installed by install.sh into the venv)
dependencies = []

[project.optional-dependencies]
steam = ["steam[client]>=1.4.4", "gevent"]

[project.urls]
Homepage = "https://github.com/WiseManChris/GnomePaper-Engine"
Repository = "https://github.com/WiseManChris/GnomePaper-Engine"
Issues = "https://github.com/WiseManChris/GnomePaper-Engine/issues"

[project.scripts]
gnomepaper-engine = "gnomepaper_engine.__main__:main"

[project.gui-scripts]
gnomepaper-engine-gui = "gnomepaper_engine.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gnomepaper_engine*"]

[tool.setuptools.package-data]
gnomepaper_engine = ["py.typed"]
